// Core App
Table User {
  id integer [pk]
  username varchar
  email varchar
  password varchar
  first_name varchar
  last_name varchar
  is_active boolean
  is_staff boolean
  is_superuser boolean
  date_joined datetime
  last_login datetime
}

Table UserProfile {
  id integer [pk]
  user_id integer [ref: > User.id]
  user_type enum [note: 'principal, teacher, administration']
  phone_number varchar
  must_change_password boolean
  title enum [note: 'Mr, Mrs, Ms, Dr, Prof']
  transfer_notes text
  position varchar [note: 'For administration staff']
  created_at datetime
  updated_at datetime
}

// Schools App
Table School {
  id integer [pk]
  name varchar
  slug varchar [unique]
  address text
  contact_phone varchar
  contact_email varchar
  principal_user_id integer [ref: > User.id]
  logo varchar
  is_active boolean
  created_at datetime
  updated_at datetime
}

Table Standard {
  id integer [pk]
  school_id integer [ref: > School.id]
  name enum [note: 'INF1, INF2, STD1, STD2, STD3, STD4, STD5']
  created_at datetime
  updated_at datetime

  indexes {
    (school_id, name) [unique]
  }
}

Table Student {
  id integer [pk]
  first_name varchar
  last_name varchar
  contact_phone varchar
  contact_email varchar
  date_of_birth date
  parent_name varchar
  transfer_notes text
  is_active boolean
  created_at datetime
  updated_at datetime
}

Table SchoolStaff {
  id integer [pk]
  year_id integer [ref: > SchoolYear.id]
  school_id integer [ref: > School.id]
  staff_id integer [ref: > UserProfile.id]
  position varchar
  transfer_notes text
  is_active boolean
  created_at datetime
  updated_at datetime

  indexes {
    (year_id, school_id, staff_id) [unique]
  }
}

// Academics App
Table SchoolYear {
  id integer [pk]
  school_id integer [ref: > School.id]
  start_year integer [unique]
  created_at datetime
  updated_at datetime
}

Table Term {
  id integer [pk]
  year_id integer [ref: > SchoolYear.id]
  term_number integer [note: '1, 2, or 3']
  start_date date
  end_date date
  school_days integer
  created_at datetime
  updated_at datetime

  indexes {
    (year_id, term_number) [unique]
  }
}

Table StandardTeacher {
  id integer [pk]
  year_id integer [ref: > SchoolYear.id]
  standard_id integer [ref: > Standard.id]
  teacher_id integer [ref: > UserProfile.id, note: 'where user_type=teacher']
  created_at datetime
  updated_at datetime

  indexes {
    (year_id, standard_id, teacher_id) [unique]
  }
}

Table Enrollment {
  id integer [pk]
  year_id integer [ref: > SchoolYear.id]
  standard_id integer [ref: > Standard.id]
  student_id integer [ref: > Student.id]
  created_at datetime
  updated_at datetime

  indexes {
    (year_id, standard_id, student_id) [unique]
  }
}

Table StandardSubject {
  id integer [pk]
  year_id integer [ref: > SchoolYear.id]
  standard_id integer [ref: > Standard.id]
  subject_name varchar
  description text
  created_by_id integer [ref: > UserProfile.id, note: 'where user_type=teacher']
  created_at datetime
  updated_at datetime

  indexes {
    (year_id, standard_id, subject_name) [unique]
  }
}

// Reports App
Table Test {
  id integer [pk]
  standard_id integer [ref: > Standard.id]
  term_id integer [ref: > Term.id]
  test_type enum [note: 'assignment, quiz, midterm, final_exam, project, other']
  test_date date
  description text
  created_by_id integer [ref: > UserProfile.id, note: 'where user_type=teacher']
  created_at datetime
  updated_at datetime
}

Table TestSubject {
  id integer [pk]
  test_id integer [ref: > Test.id]
  standard_subject_id integer [ref: > StandardSubject.id]
  max_score integer
  created_at datetime
  updated_at datetime

  indexes {
    (test_id, standard_subject_id) [unique]
  }
}

Table TestScore {
  id integer [pk]
  test_subject_id integer [ref: > TestSubject.id]
  student_id integer [ref: > Student.id]
  score integer
  created_at datetime
  updated_at datetime

  indexes {
    (test_subject_id, student_id) [unique]
  }
}

// Note: TermTest and StudentSubjectScore have been replaced by Test, TestSubject, and TestScore models

// StudentTermReview consolidates attendance, qualitative ratings, and teacher remarks

Table StudentTermReview {
  id integer [pk]
  term_id integer [ref: > Term.id]
  student_id integer [ref: > Student.id]
  days_present integer
  days_late integer
  attitude integer [note: '1-5 scale']
  respect integer [note: '1-5 scale']
  parental_support integer [note: '1-5 scale']
  attendance integer [note: '1-5 scale']
  assignment_completion integer [note: '1-5 scale']
  class_participation integer [note: '1-5 scale']
  time_management integer [note: '1-5 scale']
  remarks text
  created_at datetime
  updated_at datetime

  indexes {
    (term_id, student_id) [unique]
  }
}